1.3.BETA9
- added some defaults to the api to reduce implementing class clutter

1.3.BETA8
- by popular demand I added 3 more bauble slots: head, body and charm
- added IRenderBauble. This is an item interface that allows baubles to be rendered on the players body or head. Heavily based of the renderer used by Botania (Thanks Vazkii!)

1.3.BETA7
- added a new type of bauble to the API - "TRINKET". It can go into any bauble slot

1.3.BETA6
- fix bauble syncing on MP servers. 

1.3.BETA5
- change MODID back to 'Baubles' to preserve dependencies. This will need to change to lowercase for the MC 1.11 update.

1.3.BETA4
- allow baubles to retain compatibility with mods created for older versions. 
- BaublesApi.getBaubles now returns IInventory again and a new method has been created to return the new handler if you want to use that instead.

1.3.BETA3
- a few minor fixes / tweaks

1.3.BETA2
- made baubles packets a bit more thread safe

1.3.BETA1
- note that this is an alpha version - testing is required
- update to MC 1.10.2 and Java 1.8
- move baubles to a capabilities based system which should hopefully solve a lot of longstanding issues
- compatible with older saves

1.2.1.0
- update to MC 1.9.4

1.2.0.2
- Fix manifest build issue (#130)

1.2.0.1
- Fix bauble button alignment when potion shift is disabled (#129)

1.2.0.0
- update to MC 1.9
- updated gui to account for new shield slot
- fixed bauble button location when potions are toggling between active and inactive

1.1.3.0
- update to MC 1.8.9

1.1.2.0
- update to MC 1.8.8

1.1.1.1
- change filename format to account for players with names that are forbidden normally
- fixed for client-side syncing event not firing on initial player login

1.1.1.0
- make it work server-side

1.1.0.0
- update for MC 1.8

1.0.1.10
- api package-info.java cleanup (closes #80)
- now you won't lose items in bauble crafting grid when switching back to vanilla inventory 

1.0.1.9
- Update to Forge 10.13.2+ 