@@ -1,5 +1,6 @@
 1.3.BETA9
 - added some defaults to the api to reduce implementing class clutter
+- added command line (/baubles) for ops to view and clear a players baubles inventory
 
 1.3.BETA8
 - by popular demand I added 3 more bauble slots: head, body and charm
